--- a/WorldTrotterBNR/Base.lproj/Main.storyboard
+++ b/WorldTrotterBNR/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="is really" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOp-kM-T5S">
-                                <rect key="frame" x="131" y="171" width="114" height="43"/>
+                                <rect key="frame" x="130" y="171" width="114" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -81,12 +81,17 @@
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Vn-pP-pCe">
+                                <rect key="frame" x="0.0" y="388" width="375" height="230"/>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.95686274509803915" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="SRf-lu-Mim" secondAttribute="trailing" id="005-8I-h0F"/>
+                            <constraint firstItem="1Vn-pP-pCe" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="9fX-Bo-Z1H"/>
                             <constraint firstItem="qOp-kM-T5S" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Dzz-Ir-5Rz"/>
+                            <constraint firstItem="1Vn-pP-pCe" firstAttribute="top" secondItem="SRf-lu-Mim" secondAttribute="bottom" constant="31" id="EkV-j7-pqb"/>
                             <constraint firstItem="sX3-eR-my1" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QRA-Lh-yUu"/>
                             <constraint firstItem="sX3-eR-my1" firstAttribute="centerX" secondItem="u7h-m4-sf7" secondAttribute="centerX" id="RUa-QV-Uda"/>
                             <constraint firstItem="geK-ta-fGe" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="STp-QS-Evo"/>
@@ -100,8 +105,10 @@
                             <constraint firstItem="SRf-lu-Mim" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mpR-7q-L0E"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="u7h-m4-sf7" secondAttribute="trailing" id="nVQ-WX-f4X"/>
                             <constraint firstItem="SRf-lu-Mim" firstAttribute="centerX" secondItem="u7h-m4-sf7" secondAttribute="centerX" id="qF7-np-WMR"/>
+                            <constraint firstItem="1Vn-pP-pCe" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="rsG-Lo-DLG"/>
                             <constraint firstItem="qOp-kM-T5S" firstAttribute="top" secondItem="u7h-m4-sf7" secondAttribute="bottom" constant="8" id="wee-AD-NWo"/>
                             <constraint firstItem="qOp-kM-T5S" firstAttribute="centerX" secondItem="u7h-m4-sf7" secondAttribute="centerX" id="zUo-fF-qfr"/>
+                            <constraint firstItem="1Vn-pP-pCe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="zqs-3E-OC0"/>
                             <constraint firstItem="u7h-m4-sf7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="zxI-qQ-Hmc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -122,7 +129,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="308" y="311"/>
+            <point key="canvasLocation" x="308" y="310.79460269865069"/>
         </scene>
         <!--Map-->
         <scene sceneID="qdb-49-0Db">
